[project]
name = "functionfinder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer", "rich"]

[project.optional-dependencies]
dev = ["pytest", "typer", "mypy", "ruff"]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I"]  # Common error/warning codes; adjust as needed
exclude = ["build", ".venv", "tests"]

[tool.mypy]
python_version = 3.13
files = "functionfinder"
ignore_missing_imports = true
strict = true
